--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ td{width:0px; font-family: "Lucida Console";border-width: 2.5; padding-top: 25; 
 </style>
 <body>
 </body>
-<script type="text/javascript" src="scoreboard.js"></script>
+<script type="text/javascript" src="index.js"></script>
 </html>
