--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@ td{width:0px; font-family: "Lucida Console";border-width: 2.5; padding-top: 25; 
 </style>
 <body>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="index.js"></script>
 </html>
